# pish

./: .gitignore  LICENSE  README.md  pish.sh  pyproject.toml
pish/: __init__.py  cli.py
