[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pish"
version = "0.1.0"
description = "Natural language → bash → execute. A CLI wrapper around pi."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "wawow", email = "wawow830@gmail.com" }
]
keywords = ["cli", "bash", "shell", "ai", "pi", "natural-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

dependencies = []

[project.scripts]
pish = "pish.cli:main"

[project.urls]
Homepage = "https://github.com/wawow830/pish"
Repository = "https://github.com/wawow830/pish"
Issues = "https://github.com/wawow830/pish/issues"
